--- a/META.yml
+++ b/META.yml
@@ -19,7 +19,9 @@ no_index:
     - inc
     - t
     - xt
+requires:
+  DBIx::DBHResolver: 0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nekokak/DBIx-Skinny-Mixin-DBHResolver.git
-version: 0.01
+version: 0.02
