Import of NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.03 from CPAN.
gitpan-cpan-distribution: DBIx-Skinny-Mixin-DBHResolver
gitpan-cpan-version:      0.03
gitpan-cpan-path:         NEKOKAK/DBIx-Skinny-Mixin-DBHResolver-0.03.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: ~
+abstract: 'DBIx::DBHResolver mixin for DBIx::Skinny.'
 author:
   - 'Atsushi Kobayashi <nekokak _at_ gmail _dot_ com>'
 build_requires:
@@ -21,7 +21,8 @@ no_index:
     - xt
 requires:
   DBIx::DBHResolver: 0
+  DBIx::Skinny: 0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nekokak/DBIx-Skinny-Mixin-DBHResolver.git
-version: 0.02
+version: 0.03
